<resources>
    <string name="app_name">GazoraJelento</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="n_v">Felhasználónév</string>
    <string name="jelsz">Jelszó</string>
    <string name="bejelentkezesHeader">Üdvözöljük</string>
    <string name="regisztr_ci">Regisztráció</string>
    <string name="email">Email</string>
    <string name="telefonsz_m">Telefonszám</string>
    <string name="jelsz_meger_s_t_se">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="c_m">Cím</string>
    <string name="default_web_client_id">1900085</string>
    <string name="j_rt_k_dikt_l_sa">Új érték diktálása</string>
    <string name="j_rt_k_bedikt_l_sa">Új érték bediktálása</string>
    <string name="rt_k">Érték</string>
    <string name="bedikt_l">Bediktál</string>
    <string name="felhaszn_l_n_v">Felhasználónév</string>
    <string name="profil_adatok">Profil adatok</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="mobil">Mobil</string>
    <string name="m_dos_t_s">Módosítás</string>
    <string name="m_gse">Mégse</string>
    <string name="profil_t_rl_se">Profil törlése</string>
    <string name="j_dikt_l_s">Új Diktálás</string>

    <string-array name="mobileOptions">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
    </string-array>
</resources>